overflow issue has been fixed

--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ main{
     width: auto;
     display: flex;
 }
-.items{
+.not-found-items{
     overflow: hidden;
 }
 .selected-items{
@@ -425,6 +425,8 @@ main{
 }
 
 .arrow-collapse{
+    position: relative;
+    left: -3px;
     cursor: pointer;
     display: flex;
     float: right;
